assets/styles/styles.css
/* ... */
/* PRODUCTS SECTION */

/* FORM SECTION */
section.form__section {
  background: url('../img/form-bgc-pattern-full.jpg') no-repeat center center;
  background-size: cover;
  height: 100%;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between;
  gap: 5rem;
}

.img-wrapper {
  margin-top: 13rem;
  width: 50%;
  height: 100vh;
}

.img-form {
  width: 100%;
  height: 100%;
  object-fit: cover;  
}

form.form {
  height: 50rem;
  width: 50%;
  margin: 20rem 0 0 4rem;
  display: flex;
  flex-flow: column nowrap;  
  justify-content: space-evenly;
  background-color: rgba(230, 230, 230, 0.95);
  border-radius: .5rem;
  padding: 2.5rem;
  text-align: center;
  box-shadow: 0 0 .4rem rgba(0, 0, 0, .3);
}

h2.form__heading {
  font-size: 2em;
  text-align: left;
}

.input-wrapper {
  /* margin: 0 0 2rem 0; */
}

/* REMEMBER DO REFACOTR THIS PART */
.input-wrapper:nth-of-type(1) {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between;
  /* border: 1px solid black; */
  padding: 2rem 0;
  gap: 2rem;
}


.input-wrapper:nth-of-type(3) {
  padding: 0 0 3rem 0;
}

/* .input-wrapper:nth-of-type(2),
.input-wrapper:nth-of-type(3) {
  padding: 2rem 0;
} */
/* REMEMBER DO REFACOTR THIS PART */

.input-names__wrapper,
.input-datatime__wrapper,
.input-tel__wrapper{
  width: 50%;
  height: 25px;
}


/* Label settings */
.input-label__name,
.input-name,
.input-datatime,
.label-datatime, 
.input-tel,
.label-email,
.label-input__tel {
  display: block;
  transition: 300ms ease-in-out;
}

.input-label__name,
.label-email,
.label-input__tel {
  width: max-content;
  position: relative;
  text-align: left;
  top: -25px;
  left: 5px;
  font-style: italic;
}

/* input settings */
.input-name,
.input-email,
.input-datatime,
.input-tel {
  width: 100%;
  outline: none;
  border: none;
  padding: 0.5rem;
  height: var(--input-height);
  border-radius: var(--input-bdrs);
  box-shadow: var(--input__box-shadows);
}

/* NOTE: REFACTOR MAKING A GOOD CALC TO WORK WITH VARIABLES */
/* Input-name animations */
input.first-name:focus,
input.last-name:focus,
input.input-email:focus,
input.input-tel:focus {
  box-shadow: var(--input-focused__box-shadows);
  background-color: rgba(235, 235, 235, 0.9)
}

input.first-name:valid,
input.last-name:valid,
input.input-email:valid {
  box-shadow: var(--input-valid__box-shadows);
}

/* TODO: After set Regex to input-tel, add this input in this animations with :valid */

/* input and label animations */
input.first-name:focus ~ label.first-name__label,
input.last-name:focus ~ label.last-name__label,
input.input-email:focus ~ label.label-email,
input.input-tel:focus ~ label.label-input__tel,
input.first-name:valid ~ label.first-name__label,
input.last-name:valid ~ label.last-name__label,
input.input-email:valid ~ label.label-email {
  top: -50px;
  font-size: .8em;
}

input.input-email {
  width: 100%;
}

/* Datatime and input-tel settings */
.input-wrapper:nth-of-type(3) {
  display: flex;
  flex-flow: row nowrap;
  align-items: start;
  justify-content: space-between;
  gap: 2rem;
}

.input-datatime__wrapper {
  display: flex;
  height: 3rem;
  flex-flow: row nowrap;
  align-items: start;
  justify-content: space-between;
  gap: 2rem; 
}


.label-datatime {
  width: max-content;
  text-align: left;
  align-self: center;
}

.input-datatime {
  width: 50%;
}




/* Submit btn settins */
.btn-submit {
  display: block;
  width: 50%;
  height: 5rem;
  margin: 0 auto;
  border: .3rem solid black;
  transition: all 300ms ease-in-out;
  background-color: rgba(255, 255, 255, 0.673);
  font-size: 1.5em;
  font-weight: 700;
  cursor: pointer;
  box-shadow: 0 0 0 0 black;
  text-transform: uppercase;
}

.btn-submit:hover {
  transform: translateY(-4px) translateX(-2px);
  box-shadow: 2px 5px 0 0 black;
};


/* EFFECTS/ANIMATIONS */
  /* Header animations */
h1.logo__heading,
a.nav-link {
  transition: 
    opacity var(--transition-timing),
}

.logo__heading:hover,
.nav-link:hover {
  opacity: .7;
  transform: scale(102%);
}

.nav-link:hover::before {
  width: 100%;
}

.nav-link:hover::after {
  width: 100%;
}

h1.logo__heading:active,
a.nav-link:active {
  transform: scale(90%);
}
  /* Header animations */

  /* Btn's animations */
.btn:hover {
  transform: scale(105%);
  cursor: pointer;
  background-color: #bebeba;
}
  /* Btn's animations */
/* EFFECTS/ANIMATIONS */


/* KEYFRAMES */
  @keyframes text-focus-in {
    0% {
      -webkit-filter: blur(15px);
              filter: blur(15px);
      opacity: 0;
    }

    100% {
      -webkit-filter: blur(0px);
              filter: blur(0px);
      opacity: 1;
    }
    
  }
/* KEYFRAMES */

